# templates

ansible/: .gitattributes  ansible.cfg  main_playbook.yml
ansible/inventory/: hosts.yml
cmake/: CMakeSettings-2017.json  CMakeSettings-2019.json  CMakeSettings-Ninja.json
cpp-project/: CMakeLists.txt  build32.ps1  build64.ps1
cpp-project/cmake/: Architecture.cmake  Common.cmake  CompilerFlags.cmake  Debug.cmake  Macros.cmake  TargetArchitecture.cmake
cpp-project/cmake/CMakeSettingsTemplates/: CMakeSettings-2017.json
cpp-project/lib/: CMakeLists.txt
cpp-project/src/: CMakeLists.txt
cpp-project/test/: CMakeLists.txt
disclaimers/: cpp.txt  java.txt
git-repo/: LICENSE-APACHE  README.md  gitbugtraq  gitignore-base  gitignore-base-vs  gitignore-cmake  gitignore-visual-studio
git-repo/nix/: gitattributes
git-repo/win/: gitattributes
nginx/: cors-open.inc  cors.inc  dhparam.pem.j2  example.com.conf.j2  example.com.crt.j2  example.com.key.j2  nginx.conf.j2  security-headers.inc
terraform/: README.md
terraform/environments/: README.md
terraform/environments/global/: main.tf
terraform/environments/modules/ecr/: ecr_policy.tpl  main.tf
terraform/environments/modules/ecs_cluster/: 12-ec2-autoscalling.tf  40-load-balancer.tf  50-service-discovery.tf  90-outputs.tf
terraform/environments/modules/ecs_service/: 20-task-template.tf  30-task-definition.tf  40-load-balancer.tf  60-ecs-service.tf  99-variables.tf
terraform/environments/modules/ecs_service/task_definitions/: task-template.json
terraform/environments/modules/ssh_keys/: main.tf  variables.tf
terraform/environments/production/: main.tf  variables.tf
terraform/environments/staging/: main.tf  variables.tf
terraform/workspaces/: README.md
terraform/workspaces/aproach1/: assert.tf  main.tf  prod.tfvars  stage.tfvars  variables.tf
terraform/workspaces/aproach2/: main.tf  secrets.tf  workspace.tf
terraform/workspaces/aproach2_full/: main.tf  workspace.tf
terraform/workspaces/aproach2_full/modules/deploy_to_region/: main.tf  variables.tf
terraform/workspaces/aproach2_full/modules/distribute_ssh_keys/: main.tf  output.tf  variables.tf
terraform/workspaces/aproach2_full/modules/ecr/: main.tf  variables.tf
terraform/workspaces/aproach2_full/modules/ecs_cluster/: 50-ec2-autoscalling.tf  60-load-balancer.tf  70-service-discovery.tf  90-outputs.tf  99-variables.tf
vscode/cpp-win/: c_cpp_properties.json  tasks.json
(+7 files in other folders)
